--- a/deploy/rbac.yaml
+++ b/deploy/rbac.yaml
@@ -52,4 +52,4 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: kube-resource-report
-  namespace: default
+  namespace: kube-resource-report-system
