--- a/deploy/ingress.yaml
+++ b/deploy/ingress.yaml
@@ -6,6 +6,8 @@ metadata:
     kubernetes.io/ingress.class: nginx
     certmanager.k8s.io/cluster-issuer: letsencrypt-prod
     kubernetes.io/tls-acme: "true"
+    nginx.ingress.kubernetes.io/auth-secret: basic-auth
+    nginx.ingress.kubernetes.io/auth-type: basic
   labels:
     app.kubernetes.io/name: kube-resource-report
   name: kube-resource-report
